Attempt at first assembler for it

--- a/DCPU-16/DCPU-16.csproj
+++ b/DCPU-16/DCPU-16.csproj
@@ -86,6 +86,7 @@
     <Compile Include="LimitedStack.cs" />
     <Compile Include="Line.cs" />
     <Compile Include="LinesAccessor.cs" />
+    <Compile Include="MachineCode.cs" />
     <Compile Include="OpenFileDisplay.cs">
       <SubType>Form</SubType>
     </Compile>
