--- a/DCPU-16/DCPU-16.csproj
+++ b/DCPU-16/DCPU-16.csproj
@@ -52,25 +52,31 @@
     <Compile Include="About.Designer.cs">
       <DependentUpon>About.cs</DependentUpon>
     </Compile>
-    <Compile Include="Assembler.cs" />
-    <Compile Include="Emulator.cs" />
-    <Compile Include="AutocompleteItem.cs" />
-    <Compile Include="AutocompleteMenu.cs">
+    <Compile Include="Assembler\Assembler.cs" />
+    <Compile Include="Emulator\Emulator.cs" />
+    <Compile Include="FastTextBox\AutocompleteItem.cs" />
+    <Compile Include="FastTextBox\AutocompleteMenu.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Char.cs" />
+    <Compile Include="FastTextBox\Char.cs" />
     <Compile Include="CodeStyles.cs" />
-    <Compile Include="CommandManager.cs" />
-    <Compile Include="Commands.cs" />
-    <Compile Include="Export.cs" />
-    <Compile Include="FastColoredTextBox.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="FileTextSource.cs" />
-    <Compile Include="FindForm.cs">
+    <Compile Include="FastTextBox\CommandManager.cs" />
+    <Compile Include="FastTextBox\Commands.cs" />
+    <Compile Include="Emulator\EmulatorWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FindForm.Designer.cs">
+    <Compile Include="Emulator\EmulatorWindow.Designer.cs">
+      <DependentUpon>EmulatorWindow.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FastTextBox\Export.cs" />
+    <Compile Include="FastTextBox\FastColoredTextBox.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="FastTextBox\FileTextSource.cs" />
+    <Compile Include="FastTextBox\FindForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FastTextBox\FindForm.Designer.cs">
       <DependentUpon>FindForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
@@ -79,57 +85,60 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="GoToForm.cs">
+    <Compile Include="FastTextBox\GoToForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GoToForm.Designer.cs">
+    <Compile Include="FastTextBox\GoToForm.Designer.cs">
       <DependentUpon>GoToForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="LimitedStack.cs" />
-    <Compile Include="Line.cs" />
-    <Compile Include="LinesAccessor.cs" />
-    <Compile Include="Macros.cs" />
-    <Compile Include="OpCodes.cs" />
+    <Compile Include="FastTextBox\LimitedStack.cs" />
+    <Compile Include="FastTextBox\Line.cs" />
+    <Compile Include="FastTextBox\LinesAccessor.cs" />
+    <Compile Include="Assembler\Macros.cs" />
+    <Compile Include="Assembler\OpCodes.cs" />
     <Compile Include="OpenFileDisplay.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="OpenFileDisplay.Designer.cs">
       <DependentUpon>OpenFileDisplay.cs</DependentUpon>
     </Compile>
-    <Compile Include="Place.cs" />
-    <Compile Include="PlatformType.cs" />
+    <Compile Include="FastTextBox\Place.cs" />
+    <Compile Include="FastTextBox\PlatformType.cs" />
     <Compile Include="Program.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Range.cs" />
-    <Compile Include="RegisterCodes.cs" />
-    <Compile Include="ReplaceForm.cs">
+    <Compile Include="FastTextBox\Range.cs" />
+    <Compile Include="Assembler\RegisterCodes.cs" />
+    <Compile Include="FastTextBox\ReplaceForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ReplaceForm.Designer.cs">
+    <Compile Include="FastTextBox\ReplaceForm.Designer.cs">
       <DependentUpon>ReplaceForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Standards.cs" />
     <Compile Include="Style.cs" />
-    <Compile Include="SyntaxDescriptor.cs" />
-    <Compile Include="SyntaxHighlighter.cs" />
-    <Compile Include="TextSource.cs" />
-    <Compile Include="TypeDescriptor.cs" />
-    <Compile Include="VisualMarker.cs" />
+    <Compile Include="FastTextBox\SyntaxDescriptor.cs" />
+    <Compile Include="FastTextBox\SyntaxHighlighter.cs" />
+    <Compile Include="FastTextBox\TextSource.cs" />
+    <Compile Include="FastTextBox\TypeDescriptor.cs" />
+    <Compile Include="FastTextBox\VisualMarker.cs" />
     <EmbeddedResource Include="About.resx">
       <DependentUpon>About.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FastColoredTextBox.resx">
+    <EmbeddedResource Include="Emulator\EmulatorWindow.resx">
+      <DependentUpon>EmulatorWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FastTextBox\FastColoredTextBox.resx">
       <DependentUpon>FastColoredTextBox.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FindForm.resx">
+    <EmbeddedResource Include="FastTextBox\FindForm.resx">
       <DependentUpon>FindForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GoToForm.resx">
+    <EmbeddedResource Include="FastTextBox\GoToForm.resx">
       <DependentUpon>GoToForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="OpenFileDisplay.resx">
@@ -144,7 +153,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="ReplaceForm.resx">
+    <EmbeddedResource Include="FastTextBox\ReplaceForm.resx">
       <DependentUpon>ReplaceForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
